# verzia4

./: .env.example  .gitignore  CLAUDE.md  PIPELINE.md  README.md  TODO.txt  UI.md  app.py  pyproject.toml  pytest.ini  requirements.txt
.claude/: settings.local.json
Latex_text_diplomova_praca/: latexmkrc  thesis.tex
Latex_text_diplomova_praca/template-definitions/: pdfa-1b.xmpi  plainnat-cz-authoryear.bst  plainnat-cz-numbers.bst  plainnat-en-authoryear.bst  plainnat-en-numbers.bst  thesistbuinzlin.cls
Latex_text_diplomova_praca/text/: abbreviations.tex  appendices.tex  references.bib  text-chapter-00-introduction.tex  text-chapter-00-objectives.tex  text-chapter-01.tex  text-chapter-02.tex  text-chapter-03.tex  text-chapter-04.tex  text-chapter-05.tex  text-chapter-06.tex  text-chapter-07.tex  text-chapter-08.tex  text-chapter-99-conclusion.tex  text-chapter-VZOR.tex  text-chapter-VZOR2.tex
data/: autori_utb_oficial_utf8.csv  detail_row_order.json  fakulty_utb_oficial_utf8.csv  issn_duplicates.csv  pipeline_schedules.json  utb_internal_authors.csv
scripts/: reset_and_run.py  run.cmd  setup_windows.ps1
src/authors/: attribution.py  heuristics.py  heuristics_runner.py  (+5 more)
tests/: test_author_editor_view.py  test_author_pipeline.py  test_authors_registry.py  test_authors_service.py  test_crossref_service.py  test_dates_parser.py  test_db_setup.py  test_deduplication.py  test_golden_dataset.py  test_llm_session.py  test_llm_tasks.py  test_queue_service.py  test_records_list.py  test_scopus_parser.py  test_validation.py  test_workplace_tree.py
web/: __init__.py
(+66 files in other folders)
