[project]
name = "utb-metadata-pipeline"
version = "1.0.0"
description = "Pipeline na spracovanie afiliácií UTB"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "sqlalchemy>=2.0.0",
    "psycopg[binary]>=3.1.0",
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
    "jellyfish>=1.0.3",
]

[tool.uv]
managed = true